# SqueekyTrolley

./: Cargo.toml  LICENSE  README.md
data/: .~lock.products.csv#  products.csv
src/: lib.rs  main.rs  product.rs
static/: index.html  index.js
