[package]
name = "squeeky_trolley"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix = "0.9.0"
actix-web = "2"
actix-rt = "1"
actix-files = "0.2.1" # for static files
actix-web-actors = "2.0.0" # for web sockets